<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logoYaziRengi"
    tools:context=".activities.CategoriesActivitiy"
    >


    <Button
        android:id="@+id/btnKtgTeknoloji"
        android:layout_width="@dimen/kategoriButonBoyut"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/btn_design"
        android:drawableLeft="@drawable/teknolojiicon"
        android:gravity="center"
        android:text="@string/kategoriTeknoloji"
        android:textColor="@color/logoYaziRengi"
        android:textSize="@dimen/yaziBoyut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnKtgYemek"
        android:layout_width="@dimen/kategoriButonBoyut"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_design"
        android:drawableLeft="@drawable/muzikicon"
        android:gravity="center"
        android:text="@string/kategoriMuzik"
        android:textColor="@color/logoYaziRengi"
        android:textSize="@dimen/yaziBoyut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKtgTeknoloji" />

    <Button
        android:id="@+id/btnKtgSpor"
        android:layout_width="@dimen/kategoriButonBoyut"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_design"
        android:drawableLeft="@drawable/sporicon"
        android:gravity="center"
        android:text="@string/kategoriSpor"
        android:textColor="@color/logoYaziRengi"
        android:textSize="@dimen/yaziBoyut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKtgYemek" />

    <Button
        android:id="@+id/btnKtgFilm"
        android:layout_width="@dimen/kategoriButonBoyut"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_design"
        android:drawableLeft="@drawable/filmicon"
        android:gravity="center"
        android:text="@string/kategoriFilm"
        android:textColor="@color/logoYaziRengi"
        android:textSize="@dimen/yaziBoyut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKtgSpor" />

    <Button
        android:id="@+id/btnCikis"
        android:layout_width="@dimen/cikisButonBoyut"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_design"
        android:drawableLeft="@drawable/exiticon"
        android:gravity="center"
        android:text="ÇIKIŞ"
        android:textColor="@color/logoYaziRengi"
        android:textSize="@dimen/yaziBoyut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKtgFilm" />

</androidx.constraintlayout.widget.ConstraintLayout>